eks/server_state.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-state
  namespace: nginx-ingress
  labels:
    app: server-state
spec:
  type: NodePort
  selector:
    app: server-state
  ports:
    - protocol: TCP
      # 抽象化されたServiceのポートであり、
      # 他のPodがServiceへのアクセスに使用する任意のポートにすることができます
      port: 80

      # コンテナがListenしているポート番号
      targetPort: 8080

      # 各ノードで実際にListenするポート番号 30000-32767
      # nodePort:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-state
  namespace: nginx-ingress
  labels:
    app: server-state
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-state
  template:
    metadata:
      labels:
        app: server-state
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: server-state
        image: wakabayashi/server_state:latest
        ports:
        - containerPort: 8080
