eks/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: nginx-ingress
spec:
  rules:
    - host: server-state.example.jp
      http:
        paths:
          - backend:
              serviceName: server-state
              servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  # namespace: nginx-ingress
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-ingress
